extension/src/main/java/com/danhaywood/isis/wicket/excel/collectioncontents/CollectionContentsAsExcel.css
/*
 *  Copyright 2013 Dan Haywood
 *
 *  Licensed under the Apache License, Version 2.0 (the
 *  "License"); you may not use this file except in compliance
 *  with the License.  You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing,
 *  software distributed under the License is distributed on an
 *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 *  KIND, either express or implied.  See the License for the
 *  specific language governing permissions and limitations
 *  under the License.
 */

.collectionContentsAsExcel {
	width: 99%
}

.collectionContentsAsExcel .selector {
	float: right;
	margin-bottom: -25px;
	margin-top: 10px;
}

.collectionContentsAsExcel .fc-header-title {
	margin-top: 5px;
}

.collectionContentsAsExcel div.fc-event-inner {
  cursor: pointer;
}

a span.ViewLinkItem.excel {
    background-image:url('icon_excel_off.png');
    background-position: center center;
    background-repeat:no-repeat;
    background-size: 16px 16px;
}

span.ViewLinkItem.excel {
    background-image:url('icon_excel_on.png');
    background-position: center center;
    background-repeat:no-repeat;
    background-size: 16px 16px;
}

div.collectionContentsAsExcel .downloadLink {
    display: block;
    padding-top: 30px;
}

